@@ -1,7 +1,7 @@
-#	$Id: Makefile,v 1.81 2017/03/01 17:01:23 sjg Exp $
+#	$Id: Makefile,v 1.82 2017/03/12 00:07:18 sjg Exp $
 
 # Base version on src date
-_MAKE_VERSION= 20170301
+_MAKE_VERSION= 20170311
 
 PROG=	bmake
 
